@@ -1,6 +1,6 @@
 #! /usr/bin/perl -w
 
-# $Cambridge: exim/test/runtest,v 1.1 2006/02/06 16:07:10 ph10 Exp $
+# $Cambridge: exim/test/runtest,v 1.2 2006/02/08 14:28:51 ph10 Exp $
 
 ###############################################################################
 # This is the controlling script for the "new" test suite for Exim. It should #
@@ -406,16 +406,17 @@ while(<IN>)
   # Date/time in mbx mailbox files
   s/\d\d-\w\w\w-\d\d\d\d\s\d\d:\d\d:\d\d\s[-+]\d\d\d\d,/06-Sep-1999 15:52:48 +0100,/gx;
 
-  # Date/time in debugging output for writing retry records
+  # Dates/times in debugging output for writing retry records
   if (/^  first failed=(\d+) last try=(\d+) next try=(\d+) (.*)$/)
     {
     my($next) = $3 - $2;
     $_ = "  first failed=dddd last try=dddd next try=+$next $4\n";
     }
+  s/^now=\d+ received_time=\d+ diff=\d+ timeout=(\d+)/now=tttt received_time=tttt diff=tttt timeout=$1/;
 
   # Time to retry may vary
-  s/time to retry = -\d+/time to retry = -ddddd/;
-  s/retry record exists: age=\d/retry record exists: age=d/;
+  s/time to retry = \S+/time to retry = tttt/;
+  s/retry record exists: age=\S+/retry record exists: age=ttt/;
 
   # Date/time in exim -bV output
   s/\d\d-[A-Z][a-z]{2}-\d{4}\s\d\d:\d\d:\d\d/07-Mar-2000 12:21:52/g;
@@ -1581,7 +1582,8 @@ if (/^(cat)?write\s+(\S+)(?:\s+(.*))?\s*$/)
 
 # The "client" and "client-ssl" commands run a script-driven program that plays
 # the part of an email client. We also have the availability of running Perl
-# for doing one-off special things.
+# for doing one-off special things. Note that all these commands expect stdin
+# data to be supplied.
 
 if (/^client/ || /^client-ssl/ || /^(sudo\s+)?perl\b/)
   {
