@@ -36,7 +36,7 @@ Failed addresses:
 Deferred addresses:
 userx@test.ex
 locking TESTSUITE/spool/db/retry.lockfile
-retry for R:userx@test.ex = *
+retry for R:userx@test.ex = * 0 0
 Writing retry data for R:userx@test.ex
   first failed=dddd last try=dddd next try=+1 expired=0
   errno=-44 more_errno=dd,A SMTP error from remote mail server after RCPT TO:<userx@test.ex>: host 127.0.0.1 [127.0.0.1]: 451 Temporary error
@@ -84,7 +84,7 @@ Deferred addresses:
 userx@test.ex
 locking TESTSUITE/spool/db/retry.lockfile
 deleted retry information for R:test.ex
-retry for R:userx@test.ex = *
+retry for R:userx@test.ex = * 0 0
 Writing retry data for R:userx@test.ex
   first failed=dddd last try=dddd next try=+1 expired=0
   errno=-44 more_errno=dd,A SMTP error from remote mail server after RCPT TO:<userx@test.ex>: host 127.0.0.1 [127.0.0.1]: 451 Temporary error
@@ -133,7 +133,7 @@ Deferred addresses:
 userx@test.ex
 locking TESTSUITE/spool/db/retry.lockfile
 deleted retry information for R:test.ex
-retry for R:userx@test.ex = *
+retry for R:userx@test.ex = * 0 0
 Writing retry data for R:userx@test.ex
   first failed=dddd last try=dddd next try=+2 expired=0
   errno=-44 more_errno=dd,A SMTP error from remote mail server after RCPT TO:<userx@test.ex>: host 127.0.0.1 [127.0.0.1]: 451 Temporary error
