@@ -46,12 +46,12 @@ Failed addresses:
 Deferred addresses:
 usery@test.ex
 locking TESTSUITE/spool/db/retry.lockfile
-retry for R:usery@test.ex = *
+retry for R:usery@test.ex = * 0 0
 Writing retry data for R:usery@test.ex
   first failed=dddd last try=dddd next try=+1 expired=0
   errno=-44 more_errno=dd,A SMTP error from remote mail server after RCPT TO:<usery@test.ex>: host 127.0.0.1 [127.0.0.1]: 451 Temporary error
 userx@test.ex
-retry for R:userx@test.ex = *
+retry for R:userx@test.ex = * 0 0
 Writing retry data for R:userx@test.ex
   first failed=dddd last try=dddd next try=+1 expired=0
   errno=-44 more_errno=dd,A SMTP error from remote mail server after RCPT TO:<userx@test.ex>: host 127.0.0.1 [127.0.0.1]: 451 Temporary error
@@ -116,13 +116,13 @@ Deferred addresses:
 usery@test.ex
 locking TESTSUITE/spool/db/retry.lockfile
 deleted retry information for R:test.ex
-retry for R:usery@test.ex = *
+retry for R:usery@test.ex = * 0 0
 Writing retry data for R:usery@test.ex
   first failed=dddd last try=dddd next try=+2 expired=0
   errno=-44 more_errno=dd,A SMTP error from remote mail server after RCPT TO:<usery@test.ex>: host 127.0.0.1 [127.0.0.1]: 451 Temporary error
 userx@test.ex
 deleted retry information for R:test.ex
-retry for R:userx@test.ex = *
+retry for R:userx@test.ex = * 0 0
 Writing retry data for R:userx@test.ex
   first failed=dddd last try=dddd next try=+2 expired=0
   errno=-44 more_errno=dd,A SMTP error from remote mail server after RCPT TO:<userx@test.ex>: host 127.0.0.1 [127.0.0.1]: 451 Temporary error
